added gradle file

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,31 @@
-*.class
-*.jar
-.project
-.classpath
+# folders
+.gradle/
+.idea/
+.metadata/
 .settings/
-/bin/
-/build/
-/javadoc/
+.qbcache/
+.recommenders/
+.shelf/
+bin/
+build/
+out/
+classes/
+product/collector/log_*/
+.vs/
+
+# files
+.classpath
+.project
+*.iml
+*.ipr
+*.iws
+*.orig
+*.launch
+*.log
+*-ide-plugin.xml
+.DS_Store
+**/.DS_Store
+
+#excludes
+!**/src/*/resources/**
+!**/src/*/java/**
