--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,12 @@ repositories {
     mavenCentral()
 }
 
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
