--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,7 @@ dependencies {
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
+
+test {
+    exclude '**/local/*.class'
+}
