--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ install: ./gradlew assemble
 script: ./gradlew check -i
 deploy:
   provider: releases
-  api_key:
-    secure: $API_KEY_SECURE
+  api_key: "$API_KEY"
   name: openkit-java $(git tag --contains HEAD)
   prerelease: true
   file_glob: true
