--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ language: java
 install: ./gradlew assemble
 
 # Runs tests that check the implementation (unit tests)
-script: ./gradlew check
+script: ./gradlew check --info
 
 # Creates a GitHub release and deploys artifacts to this release
 deploy:
