--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,14 @@ jdk:
 - oraclejdk7
 - oraclejdk8
 
+before_install:
+- ls -l $JAVA_HOME
 # Install the repository locally - this downloads dependencies, compiles the source code, and
 # creates all artifacts
 install: ./gradlew assemble
 after_install:
-  - mv build/libs build/libs-$(java -version 2>&1 | head -1 | sed 's/.*"\(.*\)"/\1/g')
-  - mv build/distributions build/distributions-$(java -version 2>&1 | head -1 | sed 's/.*"\(.*\)"/\1/g')
+- mv build/libs build/libs-$(java -version 2>&1 | head -1 | sed 's/.*"\(.*\)"/\1/g')
+- mv build/distributions build/distributions-$(java -version 2>&1 | head -1 | sed 's/.*"\(.*\)"/\1/g')
 
 # Runs tests that check the implementation (unit tests)
 script: ./gradlew check --info
