--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 sourceCompatibility = 1.6
-targetCompatibility = 1.6
+targetCompatibility = "1." + (System.getenv("TARGET_COMPATIBILITY") ?: "6")
 
 
 dependencies {
