--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,15 @@ before_install:
 # Install the repository locally - this downloads dependencies, compiles the source code, and
 # creates all artifacts
 install: ./gradlew assemble
-after_install:
-- mv build/libs/openkit-java-*.jar build/libs/openkit-java-vX.Y.Z-java$TARGET_COMPATIBILITY.jar
 
 # Runs tests that check the implementation (unit tests)
 script: ./gradlew check --info
 
 after_script:
 - find -name "*.jar" -ls
+
+after_success:
+- mv build/libs/openkit-java-*.jar build/libs/openkit-java-vX.Y.Z-java$TARGET_COMPATIBILITY.jar
 
 # Creates a GitHub release and deploys artifacts to this release
 deploy:
