--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ dist: trusty
 # The main language that this repo uses - this enables Gradle support
 language: java
 
+# The JDK to be used
 jdk:
 - oraclejdk8
 
+# The target compatibility matrix, that creates artifacts for different java versions
 env:
 - TARGET_COMPATIBILITY=6
 - TARGET_COMPATIBILITY=7
