--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ deploy:
   # Metadata of this release
   #
   # The name of this release
-  name: openkit-java $(git tag --contains HEAD | sed 's/^v//g')
+  name: openkit-java $(git tag --contains HEAD)
   # This release should be flagged as pre-release
   prerelease: true
 
