--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script: ./gradlew check --info
 
 after_success:
 - |
-  if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" -a "$TARGET_COMPATIBILITY" = "8" ]; then
+  if [ "$TRAVIS_BRANCH" = "release/1.2" -a "$TRAVIS_PULL_REQUEST" = "false" -a "$TARGET_COMPATIBILITY" = "8" ]; then
     export CI_NAME="travis-ci"
     export CI_BUILD_NUMBER="$TRAVIS_BUILD_NUMBER"
     export CI_BRANCH="$TRAVIS_BRANCH"
