--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,6 @@ repositories {
 }
 
 def target = System.getenv("TARGET_COMPATIBILITY") ?: "6"
-def targetJavaExecutable = System.getenv('TEST_JVM') ?: System.getenv("JAVA_HOME")
 
 sourceCompatibility = 1.6
 targetCompatibility = "1." + target
@@ -41,11 +40,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-}
-
-test {
-    exclude '**/local/*.class'
-    executable = targetJavaExecutable + "/bin/java"
 }
 
 jar {
@@ -156,4 +150,14 @@ task printVersion {
             logger.quiet version
         }
     }
+}
+
+// run each test for every JAVA_HOME_* environment which is set
+[target, System.getenv().findAll { it.key.startsWith('JAVA_HOME') }.keySet()].combinations {targetJVM, envJVM ->
+    def configName = "test-${targetJVM}-${envJVM}"
+    task "test-${configName}"(type: Test) {
+        exclude '**/local/*.class'
+        executable = System.getenv("${envJVM}") + "/bin/java"
+    }
+    tasks.test.dependsOn tasks."test-${configName}"
 }
