--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
-        classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.3.0'
+        classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.4.6'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2'
     }
 }
@@ -31,6 +31,7 @@ repositories {
 }
 
 def target = System.getenv("TARGET_COMPATIBILITY") ?: "6"
+def jvmToTest = System.getenv("JVM_TO_TEST") ?: "6"
 
 sourceCompatibility = 1.6
 targetCompatibility = "1." + target
@@ -152,12 +153,17 @@ task printVersion {
     }
 }
 
-// run each test for every JAVA_HOME_* environment which is set
-[target, System.getenv().findAll { it.key.startsWith('JAVA_HOME') }.keySet()].combinations {targetJVM, envJVM ->
-    def configName = "test-${targetJVM}-${envJVM}"
-    task "test-${configName}"(type: Test) {
-        exclude '**/local/*.class'
-        executable = System.getenv("${envJVM}") + "/bin/java"
+// run each test for every JAVA_HOME_* environment which is specified and set as environment
+[target, jvmToTest.split(",")].combinations { targetJVM, envJVM ->
+    if(System.getenv("JAVA_HOME_" + envJVM) != null) {
+        def configName = "test-${targetJVM}-${envJVM}"
+        task "test-${configName}"(type: Test) {
+            exclude '**/local/*.class'
+            executable = System.getenv("JAVA_HOME_" + envJVM) + "/bin/java"
+        }
+        tasks.test.dependsOn tasks."test-${configName}"
+    } else {
+        logger.quiet("Can't find JAVA_HOME_" + envJVM + ". Test ignored!")
+
     }
-    tasks.test.dependsOn tasks."test-${configName}"
 }
