--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ repositories {
 }
 
 def sourceTarget = "6"
-def jvmsToTest = System.getenv("JVM_TO_TEST") ?: "JAVA_HOME"
+def jvmsToTest = System.getenv("JVMS_TO_TEST") ?: "JAVA_HOME"
 
 sourceCompatibility = "1." + sourceTarget
 targetCompatibility = "1." + sourceTarget
