--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 
 group 'com.dynatrace.openkit'
-version '1.3.0-SNAPSHOT'
+version '${version}'
 
 def groupString = group
 def title = 'Dynatrace OpenKit SDK for Java'
@@ -138,17 +138,6 @@ publishing {
             artifact javadocJar {
                 classifier "javadoc"
             }
-        }
-    }
-}
-
-task printVersion {
-    doLast {
-        def buildNumber = System.getenv()['BUILD_NUMBER']
-        if (buildNumber != null) {
-            logger.quiet "${version}-b${buildNumber}"
-        } else {
-            logger.quiet version
         }
     }
 }
