--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,24 @@ buildscript {
 }
 
 group 'com.dynatrace.openkit'
-version '${version}'
+
+def releaseVersion
+if(!project.hasProperty('currentVersion')) {
+    Properties properties = new Properties()
+    File propertiesFile = new File('version.properties')
+    propertiesFile.withInputStream {
+        properties.load(it)
+    }
+    if(properties.version != null) {
+        releaseVersion=properties.version
+    } else {
+        releaseVersion="undefined"
+    }
+} else {
+    // use -P argument of calling script
+    releaseVersion=project['currentVersion']
+}
+version "${releaseVersion}"
 
 def groupString = group
 def title = 'Dynatrace OpenKit SDK for Java'
@@ -158,4 +175,9 @@ publishing {
 
 test {
     maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+}
+
+
+task dops {
+    print "TSET ${version}"
 }
