--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 
 group 'com.dynatrace.openkit'
-version '1.2.2-SNAPSHOT'
+version '1.2.2'
 
 def groupString = group
 def title = 'Dynatrace OpenKit SDK for Java'
