--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,33 @@
+/**
+ * Copyright 2018-2019 Dynatrace LLC
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 buildscript {
     repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        mavenCentral()
     }
-    dependencies {
-        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
-        classpath 'ru.vyarus:gradle-animalsniffer-plugin:1.4.6'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2'
-    }
+}
+
+plugins {
+    id 'java'
+    id 'jacoco'
+    id 'maven-publish'
+    id 'com.github.hierynomus.license' version '0.15.0'
+    id 'ru.vyarus.animalsniffer' version '1.4.6' apply false
+    id 'com.github.kt3k.coveralls' version '2.8.2'
+    id 'com.jfrog.bintray' version '1.8.4'
 }
 
 group 'com.dynatrace.openkit'
@@ -19,10 +38,6 @@ def groupString = group
 def title = 'Dynatrace OpenKit SDK for Java'
 def vendor = 'Dynatrace LLC'
 
-apply plugin: 'java'
-apply plugin: 'maven-publish'
-apply plugin: 'jacoco'
-apply plugin: 'com.github.kt3k.coveralls'
 if (Integer.valueOf(System.getenv("TARGET_COMPATIBILITY") ?: "6") <= 8) {
     apply plugin: 'ru.vyarus.animalsniffer'
 }
@@ -101,33 +116,6 @@ jar {
     }
 }
 
-def coverageReportDir = file("$buildDir/reports/coverage/jacoco")
-
-jacoco {
-    toolVersion = "0.8.2"
-    reportsDir = coverageReportDir
-}
-
-def coverageXmlReportFile = file("${coverageReportDir}/jacocoReport.xml")
-
-jacocoTestReport {
-    reports {
-        xml.enabled = true
-        xml.destination = coverageXmlReportFile
-        html.enabled = true
-        html.destination = file("${coverageReportDir}/html")
-    }
-}
-
-coveralls {
-    jacocoReportPath = coverageXmlReportFile.toString()
-}
-
-tasks.coveralls {
-    dependsOn 'check'
-    onlyIf { System.env.'CI' }
-}
-
 task sourceJar(type: Jar) {
     classifier = 'sources'
     from sourceSets.main.allJava
@@ -144,26 +132,8 @@ task javadocJar(type: Jar) {
     from javadoc
 }
 
-artifacts {
-    archives sourceJar, javadocZip, javadocJar
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifactId project.name
-
-            from components.java
-
-            artifact sourceJar {
-                classifier "sources"
-            }
-            artifact javadocJar {
-                classifier "javadoc"
-            }
-        }
-    }
-}
+apply from: "gradle/coverage.gradle"
+apply from: "gradle/publish.gradle"
 
 // run each test for every JAVA_HOME_* environment which is specified and set as environment
 [[sourceTarget], jvmsToTest.split(",")].combinations { targetJVM, envJVM ->
