--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -34,17 +34,14 @@ artifacts {
     archives sourceJar, javadocZip, javadocJar
 }
 
-if (System.getenv('TRAVIS') != null && System.getenv('BINTRAY_USER') != null && System.getenv('BINTRAY_KEY') != null) {
+if (System.getenv('TRAVIS') != null && System.getenv('TRAVIS_TAG') != null // only for Travis CI
+    && System.getenv('BINTRAY_USER') != null && System.getenv('BINTRAY_KEY') != null) { // User/Key must be set
     bintray {
         user = System.getenv('BINTRAY_USER')
         key = System.getenv('BINTRAY_KEY')
 
         publications = ['mavenJava']
 
-        //Whether to run this as dry-run, without deploying
-        dryRun = false
-        //If version should be auto published after an upload
-        publish = true
         //Whether to override version artifacts already published
         override = true
 
@@ -65,6 +62,8 @@ if (System.getenv('TRAVIS') != null && System.getenv('BINTRAY_USER') != null && 
 
             version {
                 name = project.version //Bintray logical version name
+                released  = new Date()
+                vcsTag  = System.getenv('TRAVIS_TAG')
             }
         }
     }
