--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,28 @@ language: java
 # run in container
 sudo: false
 
+# Additional packages to install
+addons:
+  apt:
+    packages:
+      - openjdk-6-jdk
+      - oracle-java8-installer
+
 # Job matrix
 matrix:
   include:
     - name: "Java 6 compatible"
-      jdk: oraclejdk8
-      env: TARGET_COMPATIBILITY=6
+      jdk: openjdk6
+      env: INCLUDE_IN_COVERAGE=false
     - name: "Java 7 compatible"
-      jdk: oraclejdk8
-      env: TARGET_COMPATIBILITY=7
+      jdk: openjdk7
+      env: INCLUDE_IN_COVERAGE=false
     - name: "Java 8 compatible"
       jdk: oraclejdk8
-      env: TARGET_COMPATIBILITY=8
+      env: INCLUDE_IN_COVERAGE=true
     - name: "Java 11 compatible"
       jdk: oraclejdk11
-      env: TARGET_COMPATIBILITY=11
+      env: INCLUDE_IN_COVERAGE=false
 
 # Install the repository locally - this downloads dependencies, compiles the source code, and
 # creates all artifacts
@@ -33,7 +40,7 @@ script: ./gradlew check --info
 
 after_success:
 - |
-  if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" -a "$TARGET_COMPATIBILITY" = "8" ]; then
+  if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" -a "INCLUDE_IN_COVERAGE" = "true" ]; then
     export CI_NAME="travis-ci"
     export CI_BUILD_NUMBER="$TRAVIS_BUILD_NUMBER"
     export CI_BRANCH="$TRAVIS_BRANCH"
