--- a/build.gradle
+++ b/build.gradle
@@ -25,22 +25,16 @@ plugins {
     id 'jacoco'
     id 'maven-publish'
     id 'com.github.hierynomus.license' version '0.15.0'
-    id 'ru.vyarus.animalsniffer' version '1.4.6' apply false
+    id 'ru.vyarus.animalsniffer' version '1.4.6'
     id 'com.github.kt3k.coveralls' version '2.8.2'
     id 'com.jfrog.bintray' version '1.8.4'
 }
 
 group 'com.dynatrace.openkit'
-
 version readVersion()
 
-def groupString = group
 def title = 'Dynatrace OpenKit SDK for Java'
 def vendor = 'Dynatrace LLC'
-
-if (Integer.valueOf(System.getenv("TARGET_COMPATIBILITY") ?: "6") <= 8) {
-    apply plugin: 'ru.vyarus.animalsniffer'
-}
 
 apply from: "gradle/license.gradle"
 
@@ -48,29 +42,23 @@ repositories {
     mavenCentral()
 }
 
-def sourceTarget = System.getenv("TARGET_COMPATIBILITY") ?: "6"
 def jvmsToTest = System.getenv("JVMS_TO_TEST") ?: "JAVA_HOME"
 
-sourceCompatibility = "1." + sourceTarget
-targetCompatibility = "1." + sourceTarget
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
 dependencies {
-    if (Integer.valueOf(sourceTarget) <= 8) {
-        signature 'org.codehaus.mojo.signature:java16:1.1@signature'
-    }
+    signature 'org.codehaus.mojo.signature:java16:1.1@signature'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
 
 jar {
-    baseName = 'openkit'
-    if (System.getenv('TRAVIS') != null) {
-        classifier = 'java' + sourceTarget
-    }
+    archiveBaseName = 'openkit'
 
     // split version into specification & implementation version
     def specVersion = version
@@ -102,14 +90,14 @@ jar {
         }
     }
 
-    def name = groupString.replaceAll('\\.', '/')
+    def name = group.replaceAll('\\.', '/')
 
     manifest {
         attributes 'Name': "${name}/",
                 'Specification-Title': title,
                 'Specification-Version': specVersion,
                 'Specification-Vendor': vendor,
-                'Implementation-Title': groupString,
+                'Implementation-Title': group,
                 'Implementation-Version': implVersion,
                 'Implementation-Vendor': vendor,
                 'url': 'https://github.com/Dynatrace/openkit-java'
@@ -117,18 +105,18 @@ jar {
 }
 
 task sourceJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allJava
 }
 
 task javadocZip(type: Zip, dependsOn: javadoc) {
-    baseName = 'openkit'
-    classifier = 'javadoc'
+    archiveBaseName = 'openkit'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc
 }
 
@@ -136,14 +124,13 @@ apply from: "gradle/coverage.gradle"
 apply from: "gradle/publish.gradle"
 
 // run each test for every JAVA_HOME_* environment which is specified and set as environment
-[[sourceTarget], jvmsToTest.split(",")].combinations { targetJVM, envJVM ->
+jvmsToTest.split(",").each { envJVM ->
     if(System.getenv(envJVM) != null) {
-        def configName = "${targetJVM}-${envJVM}"
-        task "test-${configName}"(type: Test) {
+        task "test-${envJVM}"(type: Test) {
             exclude '**/local/*.class'
             executable = System.getenv(envJVM) + "/bin/java"
         }
-        tasks.test.dependsOn tasks."test-${configName}"
+        tasks.test.dependsOn tasks."test-${envJVM}"
     } else {
         logger.quiet("Can't find " + envJVM + ". Test ignored!")
     }
