--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,13 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        if (JavaVersion.current().isJava6()) {
+            maven {
+                url 'http://repo.maven.apache.org/maven2/'
+            }
+        } else {
+            mavenCentral()
+        }
     }
 }
 
@@ -62,7 +68,7 @@ jar {
     if (isGradle5OrAbove) {
         archiveBaseName = 'openkit'
     } else {
-        baseName  = 'openkit'
+        baseName = 'openkit'
     }
 
     // split version into specification & implementation version
@@ -145,7 +151,7 @@ apply from: "gradle/publish.gradle"
 
 // run each test for every JAVA_HOME_* environment which is specified and set as environment
 jvmsToTest.split(",").each { envJVM ->
-    if(System.getenv(envJVM) != null) {
+    if (System.getenv(envJVM) != null) {
         task "test-${envJVM}"(type: Test) {
             exclude '**/local/*.class'
             executable = System.getenv(envJVM) + "/bin/java"
@@ -161,13 +167,13 @@ test {
 }
 
 def readVersion() {
-    if(version == 'unspecified') {
+    if (version == 'unspecified') {
         Properties properties = new Properties()
         File propertiesFile = file("version.properties")
         propertiesFile.withInputStream {
             properties.load(it)
         }
-        if(properties.version != null) {
+        if (properties.version != null) {
             return properties.version
         }
     }
