Trying to use http gradle plugins url
This https to http switch is for Java 6 only.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,13 @@
+pluginManagement {
+    repositories {
+        if (JavaVersion.current().isJava6()) {
+            maven {
+                url "http://jcenter.bintray.com"
+            }
+        } else {
+            gradlePluginPortal()
+        }
+    }
+}
+
 rootProject.name = "openkit-java"
